V3.2 update detect all file changes